# koob

./: Cargo.toml  flake.nix
css/epub/: style.css
filters/epub/: pagebreak.lua
filters/pdf/: pagebreak.lua  special_pages.lua  title.lua
pages/epub/: avant_propos.md  copyright.md  couverture.md  cover.md  dedicace.md  dedication.md  empty.md  epigraph.md  epigraphe.md  faux_titre.md  foreword.md  half_title.md  ours.md  preface.md  title.md  titre.md
pages/pdf/: avant_propos.md  copyright.md  couverture.md  cover.md  dedicace.md  dedication.md  empty.md  epigraph.md  epigraphe.md  faux_titre.md  foreword.md  half_title.md  ours.md  preface.md  title.md  titre.md  vide.md
src/: main.rs
templates/: template.typ
tests/: book.yml
tests/chapters/: chapter-01.md  chapter-02.md
tests/editions/ebook/: edition.yml
tests/editions/pdf/: edition.yml
