[package]
name = "koob"
version = "0.1.0"
publish = false
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
glob = { version = "0.3.2", default-features = false }
pandoc = { version = "0.8.11", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
serde_yaml = { version = "0.9.34", default-features = false }
simply_colored = { version = "0.1.0", default-features = false }
